# gwarf-fortress

./: .gitignore  Cargo.toml  README.md
assets/: simple_two.glb
assets/gltf/: simple_plane.glb  simple_plane.gltf  simple_two.glb  simple_two.gltf
assets/gltf/FlightHelmet/: simple_two.gltf
assets/gltf/ikea_sacabambaspis/: license.txt  scene.gltf
crates/base/: Cargo.toml
crates/base/src/: camera.rs  lib.rs  texture.rs
crates/base/src/asset/: gltf.rs  mod.rs
crates/samples/: Cargo.toml
crates/samples/examples/: blank_window.rs
crates/samples/examples/buffer/: main.rs
crates/samples/examples/camera/: main.rs
crates/samples/examples/deferred_render/: deferred_shader.wgsl  gbuffer_shader.wgsl  main.rs
crates/samples/examples/deffered_render/: deferred_shader.wgsl  gbuffer_shader.wgsl  main.rs
crates/samples/examples/inline_spv/: main.rs  shader.spv  shader.spvasm
crates/samples/examples/model_load/: indirect_frag.wgsl  light.wgsl  main.rs  shader.wgsl
crates/samples/examples/pbr/: deferred_shader.wgsl  gbuffer_shader.wgsl  main.rs
crates/samples/examples/texture/: main.rs
crates/samples/examples/triangle/: main.rs
vs_launch/: README.md  vs_launch.sln  vs_launch.vcxproj
