[workspace]
resolver = "2"
members = ["crates/*"]

[package]
name = "gwarf_fortress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# [patch.crates-io]
# naga ={ path = "/path/to/naga"}
# wgpu ={ path = "path/to/wgpu/wgpu" }
# wgpu-hal ={ path = "path/to/wgpu/wgpu-hal" }