[workspace]
resolver = "2"
members = ["crates/*"]

[package]
name = "gwarf-fortress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[patch.crates-io]
# naga ={ path = "/path/to/naga"}
## TODO waiting upstream merge
# wgpu = {git = "https://github.com/wicast/wgpu.git", branch = "shader_debug_flag"}
# wgpu-hal ={ path = "path/to/wgpu/wgpu-hal" }
