[package]
name = "gf_base"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
winit = "0.28.6"
env_logger = "0.10"
log = "0.4"
wgpu = "0.16.1"
as-any = "0.3.0"
bytemuck = {version = "1.13.1",  features = [ "derive" ]}
goth-gltf = "0.1.1"
snafu = "0.7.4"
base64 = "0.21.0"
glam = { version = "0.24", features = ["bytemuck"] }
