[package]
name = "gf_base"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
winit = "0.28.6"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
as-any = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
goth-gltf = {git = "https://github.com/wicast/goth-gltf.git", branch = "sampler_modify", features = ["wgpu_types"]}
snafu = { version = "0.7.4", features = ["backtraces"] }
base64 = "0.21.0"
glam = { version = "0.24", features = ["bytemuck"] }
nanoserde = "0.1.1"
image = "0.24.6"
urlencoding = "2.1.3"
typed-builder = "0.16.0"
pollster = "0.3.0"
